--- a/demo.tex
+++ b/demo.tex
@@ -3,7 +3,7 @@
 \titlehead{Bespoke Multipurpose Class}
 \title{A Demonstration}
 \subtitle{Of my BMC, created thanks to \LaTeX}
-\author{tecosaur}
+\author{tecosaur \footnotesize \\ Of Github}
 
 \begin{document}
 
@@ -106,6 +106,18 @@ Lipsum is a scrambled latin text \url{https://en.wikipedia.org/wiki/Lorem_ipsum}
 \newpage
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec ante quis tellus aliquet fringilla id nec ligula. Pellentesque vulputate ligula in erat tincidunt, eu venenatis augue pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed a augue ut neque dignissim euismod ac nec augue. Pellentesque gravida congue elementum. Duis pulvinar pellentesque sodales. Sed pharetra, nibh nec gravida sagittis, sapien enim cursus diam, a iaculis tellus erat sit amet purus. Nunc tortor felis, ornare eu ultricies sit amet, ultrices vitae dui. Integer ac lacinia leo.
 \checkInfo{Check this}{Checking things can be a good idea}
+
+\section{Sectioning}
+This is an introduction to a section displaing different section commands
+\subsection{A Demo}
+More specificly this is a demo of \verb|section|, \verb|subsection|, \verb|subsubsection|, \verb|paragraph|, and \verb|subparagraph|.
+\subsubsection{Now onto paragraphs}
+Occasionaly one delves into the depth of paragraph and subparagraphs.
+\paragraph{A Paragraph}
+For instance this is a paragraph.
+\subparagraph{A Subparagraph}
+Sometimes, even a paragraph isn't deep enough.
+
 \newpage
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec ante quis tellus aliquet fringilla id nec ligula. Pellentesque vulputate ligula in erat tincidunt, eu venenatis augue pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed a augue ut neque dignissim euismod ac nec augue. Pellentesque gravida congue elementum. Duis pulvinar pellentesque sodales. Sed pharetra, nibh nec gravida sagittis, sapien enim cursus diam, a iaculis tellus erat sit amet purus. Nunc tortor felis, ornare eu ultricies sit amet, ultrices vitae dui. Integer ac lacinia leo.
 \criticalInfo{Big Issue}{Critical stuff needs to be paid attention to}
